--- a/code/templates/about.html
+++ b/code/templates/about.html
@@ -33,7 +33,7 @@
         <h2 class="mt-4 mb-3">Developed By</h2>
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Prateek Sengar</h5>
+                <h5 class="card-title">Namita Singh</h5>
                 <p class="card-text">
                     Passionate and dedicated developer with experience in designing and implementing efficient systems.
                 </p>
