--- a/code/templates/layout/base.html
+++ b/code/templates/layout/base.html
@@ -75,6 +75,7 @@
     {% endif %}
     
     <div class="darkin_kayn"></div>
+    {% include 'message.html' %}
     <main>
         {% block content %}{% endblock %}
         
