--- a/code/templates/login.html
+++ b/code/templates/login.html
@@ -1,32 +1,51 @@
-{% extends 'title.html' %}
+{% extends 'layout/base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block css %}
+<!-- Link to your custom styles.css file -->
+<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+<style>
 
-{% block main %}
-<div class="container">
-    <h2>Login</h2>
-    {% include 'message.html' %}
+
+</style>
+
+{% endblock %}
+
+{% block content %}
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-4 mx-auto">
+            <div class="card">
+                <div class="card-body">
+                    <h2>Login</h2>
+    
     <form action="/login" method="post">
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="username" name="username"  class="form-control" required>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" class="form-control" required>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" class="form-control" required>
         </div>
-        <div class="form-group">
-            <input type="submit" value="LOGIN">
+        <div class="form-group mb-3">
+            <input type="submit" value="LOGIN" class="btn btn-primary">
         </div>
     </form>
-    <div class="register-link">
+    <div class="register-link mb-3">
         Don't have an account yet? <a href="/register">Register here!</a>
+    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
 {% endblock %}
+{% block js %}
+<!-- Your additional JavaScript for the index page goes here -->
 
+{% endblock %}
