--- a/code/static/styles.css
+++ b/code/static/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-position: left;
   background-size: cover;
   background-image: url('https://miro.medium.com/v2/resize:fit:2000/format:webp/1*ET2aiKwnLubVd_tUNsY8Eg.jpeg');
@@ -24,10 +24,11 @@ header {
   position: relative;
   display: flex;
   justify-content: center;
+  z-index: 1;
 }
 
 .back_navbar {
-  position: fixed;
+  position: sticky;
   margin: 0;
   width: 100%;
   height: 80px;
@@ -72,6 +73,7 @@ nav div a .fa-bars:hover {
 /* Drop Menu Styles */
 
 .darkin_kayn {
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 250px;
@@ -83,6 +85,7 @@ nav div a .fa-bars:hover {
 }
 
 .drop_menu {
+  z-index: 1001;
   transition: transform 0.3s ease-in-out;
   position: absolute;
   top: 0;
@@ -183,66 +186,5 @@ ul {
 
 /* Main Container Styles */
 
-.container {
-  width: 400px;
-  margin: 0 auto;
-  margin-top: 100px;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
 
-.container h2 {
-  font-size: 28px;
-  margin-bottom: 20px;
-  font-weight: bold;
-}
 
-.container .form-group {
-  margin-bottom: 20px;
-}
-
-.container .form-group label {
-  display: block;
-  margin-bottom: 5px;
-  font-size: 18px;
-}
-
-.container .form-group input {
-  width: calc(100% - 40px);
-  height: 40px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.container .form-group input[type="submit"] {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.container .form-group input[type="submit"]:hover {
-  background-color: #45a049;
-}
-
-.container .register-link {
-  font-size: 16px;
-  text-align: center;
-}
-
-.container .register-link a {
-  color: blue;
-  text-decoration: none;
-}
-
-/* Media Queries */
-
-@media (max-width: 768px) {
-  .container {
-    width: 80%;
-  }
-}
