--- a/code/templates/show_jobs.html
+++ b/code/templates/show_jobs.html
@@ -1,31 +1,28 @@
 {% extends 'home.html' %}
 
 {% block content %}
-  <section class="jumbotron text-center" style="background-color: #f0f0f0;">
+<div class="container" style="margin-top: 60px;"">
+  <section class="jumbotron text-center" >
+    
     <br>
-    <div class="row" style="margin-top: 60px;">
+    <div class="row" >
       {% for job in jobs %}
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <div class="card-body d-flex flex-column">
-              <h3 class="card-title">{{job.title}}</h3>
-              <div class="mb-2 text-muted">Date: {{job.created_at}}</div>
-              <p class="card-text flex-grow-1">{{job.description}}</p>
-              <div class="d-flex justify-content-center">
-                <a href="/apply/{{job.id}}" class="btn btn-primary btn-sm mt-2" target="_blank">Apply</a>
-                <a href="/delete/job/{{job.id}}" class="btn btn-danger btn-sm mt-2 ms-2">Delete</a>
-                <a href="/edit/{{job.id}}" class="btn btn-success btn-sm mt-2 ms-2">Edit</a>
-              </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <div class="card-body d-flex flex-column">
+            <h3 class="card-title">{{job.title}}</h3>
+            <div class="mb-2 text-muted">Date: {{job.created_at}}</div>
+            <p class="card-text flex-grow-1">{{job.description}}</p>
+            <div class="d-flex justify-content-center">
+              <a href="/analyse/resumes/{{job.id}}" class="btn btn-primary btn-sm mt-2">Analyse</a>
+              <a href="/delete/job/{{job.id}}" class="btn btn-danger btn-sm mt-2 ms-2">Delete</a>
+              <a href="/edit/job/{{job.id}}" class="btn btn-success btn-sm mt-2 ms-2">Edit</a>
             </div>
           </div>
         </div>
+      </div>
       {% endfor %}
     </div>
   </section>
-  <script>
-    function showResume(resumeUrl) {
-      // Implement your logic to show the resume, for example:
-      window.open(resumeUrl, '_blank');
-    }
-  </script>
+</div>
 {% endblock %}
