--- a/code/templates/add_job.html
+++ b/code/templates/add_job.html
@@ -57,7 +57,7 @@
     }
 
     input[type="submit"] {
-        background-color: #007bff;
+        background-color: #ff00e6;
         /* Change submit button background color */
         color: #fff;
         /* Change submit button text color */
