--- a/code/templates/layout/base.html
+++ b/code/templates/layout/base.html
@@ -58,12 +58,14 @@
         <div class="menu_list">
             <div class="column">
                 <li><a href="/add/resume">ADD RESUME</a></li>
+                <li><a href="/resumes">VIEW RESUMES</a></li>
                 <li><a href="/add/job">ADD JOB</a></li>
+                <li><a href="/show/jobs">VIEW JOBS</a></li>
             </div>
         </div>
         <div class="menu_list">
             <div class="column">
-                <li><a href="/show/jobs">VIEW JOBS</a></li>
+                {{session.username}}
             </div>
         </div>
         <div class="menu_list">
