--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -11,31 +11,39 @@
 {% endblock %}
 
 {% block content %}
-<div class="container register">
-    <h2>Register</h2>
-    <form action="/register" method="post">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-4 mx-auto">
+            <div class="card">
+                <div class="card-body">
+                    <h2>Register</h2>
+                    <form action="/register" method="post">
+                        <div class="form-group mb-3">
+                            <label for="username">Username</label>
+                            <input type="text" id="username" name="username" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="password" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="confirm_password">Confirm Password</label>
+                            <input id="confirm_password" name="cpassword" type="password" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <input type="submit" value="REGISTER" class="btn btn-primary">
+                        </div>
+                    </form>
+                    <div class="register-link mb-3">
+                        Already have an account? <a href="/login">Login here!</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div class="form-group">
-            <label for="confirm_password">Confirmation password</label>
-            <input id="confirm_password" name="cpassword" type="password" required>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="REGISTER">
-        </div>
-    </form>
-    <div class="register-link">
-        Already have an account? <a href="/login">Login here!</a>
     </div>
 </div>
 
