--- a/code/templates/viewjob.html
+++ b/code/templates/viewjob.html
@@ -4,7 +4,7 @@
 <style>
     body {
         background-color: beige;
-        background-image: url("https://miro.medium.com/v2/resize:fit:828/format:webp/1*G1LnmlL-FYGySnJS6tg7vQ.jpeg");
+        background-image: url("https://image-processor-storage.s3.us-west-2.amazonaws.com/images/40b728d6de76998d17ba7eb10f5c5f2c/palm-tree-leaf-shadow-on-pink-background.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
